--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,10 @@
 #container a {
   text-decoration: none;
 }
+
+.special-card {
+  padding: 5px;
+  width: 100%;
+  font-size: 9px;
+  background: white;
+}
